--- a/index.html
+++ b/index.html
@@ -1,2 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Manages Wishlist"><title>Wishlist</title><link rel="stylesheet" href="/UIzFypozwLBW9ya5Z3FIozA8B98QEuYr7FeCRdpvhCun44mzTjZQyAP8IDGbpi1DVni6fGsW4uhOWbYZ9URtWwL9S8/Wishlist/index.css"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&amp;display=swap" rel="stylesheet"></head><body><h1>Wishlist: Alexander</h1><div><div style="background-image: url(https://store.cloudflare.steamstatic.com/public/images/gift/steamcards_cards_02.png)"><a href="https://store.steampowered.com/digitalgiftcards/"><h2>Steam Giftcard</h2><h3>200.-</h3><button>Goto Site</button></a></div><div style="background-image: url(https://www.elkjop.no/image/dv_web_D180001002622835/257255/hama-8k-hdmi-hoyhastighetskabel-3-m--pdp_zoom-3000--pdp_main-960.jpg)"><a href="https://www.elkjop.no/product/tjenester-og-tilbehor/kabler-og-kontakter/hdmi-kabel/hama-8k-hdmi-hoyhastighetskabel-3-m/257255"><h2>Hdmi Cable</h2><h3>349.-</h3><button>Goto Site</button></a></div><div style="background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmixcoin.b-cdn.net%2Fwp-content%2Fuploads%2F2020%2F05%2Fnorway-banknotes-norwegian-krone-1024x683%402x.jpg&amp;f=1&amp;nofb=1&amp;ipt=c370359e98ffbe92c5436531c15dd59677bde4e82e8f868d85c13a81acd7f670&amp;ipo=images)"><a href="https://www.norges-bank.no/"><h2>Money</h2><h3>500.-</h3><button>Goto Site</button></a></div><div style="background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.greatoutdoorshop.com%2Fwp-content%2Fuploads%2F2021%2F02%2Fbca-snow-saw-1000x1000-1.jpg&amp;f=1&amp;nofb=1&amp;ipt=e1007579e480516f8e84bcb2d202341e5440c21ab0c10bb52126d07e2e2ef006&amp;ipo=images)"><a><h2>SnowSaw</h2></a></div><div style="background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs7d2.scene7.com%2Fis%2Fimage%2Fhomedepotcanada%2Fp_1001321807.jpg%3F%24pipGallery%24%26hei%3D1000%26wid%3D1000%26fmt%3Djpg%26fit%3Dconstrain&amp;f=1&amp;nofb=1&amp;ipt=b64c1105692de0aac2320da2fc51fe260a1242ff7801c62967c163ee140724ed&amp;ipo=images)"><a><h2>Snow shovel</h2></a></div><div style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/573090/header_alt_assets_6.jpg?t=1697120289)"><a href="https://store.steampowered.com/app/573090/Stormworks_Build_and_Rescue/"><h2> </h2><h3>176.-</h3><button>Goto Site</button></a></div><div style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/546560/header.jpg?t=1673391297)"><a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/"><h2>Half-Life: Alyx</h2><h3>670.-</h3><button>Goto Site</button></a></div></div></body></html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Manages Wishlist">
+    <title>Wishlist</title>
+    <link rel="stylesheet"
+        href="./Wishlist/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&amp;display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h1>Wishlist: Alexander</h1>
+    <div>
+        <div
+            style="background-image: url(https://store.cloudflare.steamstatic.com/public/images/gift/steamcards_cards_02.png)">
+            <a href="https://store.steampowered.com/digitalgiftcards/">
+                <h2>Steam Giftcard</h2>
+                <h3>200.-</h3><button>Goto Site</button>
+            </a></div>
+        <div
+            style="background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmixcoin.b-cdn.net%2Fwp-content%2Fuploads%2F2020%2F05%2Fnorway-banknotes-norwegian-krone-1024x683%402x.jpg&amp;f=1&amp;nofb=1&amp;ipt=c370359e98ffbe92c5436531c15dd59677bde4e82e8f868d85c13a81acd7f670&amp;ipo=images)">
+            <a href="https://www.norges-bank.no/">
+                <h2>Money</h2>
+                <h3>500.-</h3><button>Goto Site</button>
+            </a></div>
+        <div
+            style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/546560/header.jpg?t=1673391297)">
+            <a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/">
+                <h2>Half-Life: Alyx</h2>
+                <h3>670.-</h3><button>Goto Site</button>
+            </a></div>
+    </div>
+</body>
+
+</html>
