--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <h2>Half-Life: Alyx</h2>
                 <h3>670.-</h3><button>Goto Site</button>
             </a></div>
+        <div
+            style="background-image: url(https://pictures.abebooks.com/isbn/9785170596782-us-300.jpg)">
+            <a>
+                <h2>Metro 2033 (Book)</h2>
+            </a></div>
     </div>
 </body>
 
