--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
 <body>
     <h1>Wishlist: Alexander</h1>
     <div>
+        <div><a>
+            <h2>Money For Computer Upgrade</h2>
+            </a></div>
+        <div
+            style="background-image: url(https://www.elkjop.no/image/dv_web_D180001002607012/251736/hyperx-solocast-mikrofon--pdp_main-640.jpg)">
+            <a href="https://www.elkjop.no/product/tv-lyd-og-smarte-hjem/mikrofoner-og-tilbehor/mikrofon/hyperx-solocast-mikrofon/251736">
+                <h2>HyperX SoloCast Mic</h2>
+                <h3>699.-</h3><button>Goto Site</button>
+            </a></div>
+        <div
+            style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/546560/header.jpg?t=1673391297)">
+            <a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/">
+                <h2>Half-Life: Alyx</h2>
+                <h3>670.-</h3><button>Goto Site</button>
+            </a></div>
+        <div
+            style="background-image: url(https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2669410/header.jpg?t=1731656298)">
+            <a href="https://store.steampowered.com/app/2669410/Metro_Awakening/">
+                <h2>Metro Awakening</h2>
+                <h3>399.-</h3><button>Goto Site</button>
+            </a></div>
+        <div
+            style="background-image: url(https://cdn1.epicgames.com/spt-assets/8ae3e6daa99b4f54aa17551d1818571f/high-on-life-logo-164um.png?resize=1&w=480&h=270&quality=medium)">
+            <a href="https://store.playstation.com/no-no/product/EP2886-PPSA15389_00-0937721911272224">
+                <h2>High On Life</h2>
+                <h3>449.-</h3><button>Goto Site</button>
+            </a></div>
         <div
             style="background-image: url(https://store.cloudflare.steamstatic.com/public/images/gift/steamcards_cards_02.png)">
             <a href="https://store.steampowered.com/digitalgiftcards/">
@@ -28,11 +55,8 @@
                 <h2>Money</h2>
                 <h3>500.-</h3><button>Goto Site</button>
             </a></div>
-        <div
-            style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/546560/header.jpg?t=1673391297)">
-            <a href="https://store.steampowered.com/app/546560/HalfLife_Alyx/">
-                <h2>Half-Life: Alyx</h2>
-                <h3>670.-</h3><button>Goto Site</button>
+        <div><a>
+                <h2>Candy</h2>
             </a></div>
     </div>
 </body>
